2007-08-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/layout.c (igraph_layout_graphopt) : added

2007-08-16  Gabor Csardi  <csardi@belus>

	* src/igraph_grid.c (igraph_2dgrid_which, igraph_2dgrid_dist)
	(igraph_2dgrid_dist2, igraph_2dgrid_next_nei)
	(igraph_i_layout_mergegrid_which) : removed inline

2007-08-10  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_count_multiple) : bug corrected

	* src/structural_properties.c (igraph_is_multiple, igraph_is_loop) :
	return bool vector
	* examples/simple/igraph_is_multiple.c 
	* examples/simple/igraph_is_loop.c : updated

	* src/igraph_pmt.h
	* src/types.h
	* src/vector.c : added igraph_vector_bool_t type

	* src/structural_properties.c (igraph_count_multiple) : added

2007-08-09  Gabor Csardi  <csardi@belus>

	* src/examples/simple/vector.c : corrected a test case

2007-08-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign-graphml.c (igraph_read_graph_graphml) : 
	use a Push parser instead of an I/O parser, not clear whether this
	solves the bug reported by Kristian Ovaska. It seems to work.
	* examples/simple/graphml.c : added a simple test case

2007-07-24  Gabor Csardi  <csardi@localhost.localdomain>

	* src/community.c (igraph_community_edge_betweenness) : handle
	unconnected input graphs properly

2007-07-16  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/community.c (igraph_community_edge_betweenness) : FINALLY
	bug corrected

2007-06-12  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/revolver_cit.c (igraph_revolver_e) : added 'st' option

2007-06-11  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/types.h (IGRAPH_POSINFINITY, IGRAPH_NEGINFINITY) : added

2007-06-09  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structure_generators.c (igraph_de_bruijn, igraph_kautz) : added

2007-06-08  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_linegraph) : added

2007-06-07  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/layout.c (igraph_layout_fruchterman_reingold)