@@ -45,12 +45,13 @@ graph.isocreate <- function(size, number, directed=TRUE) {
         PACKAGE="igraph")
 }
 
-graph.isomorphic.vf2 <- function(graph1, graph2) {
+graph.isomorphic.vf2 <- function(graph1, graph2, map12=FALSE, map21=FALSE) {
 
   if (!is.igraph(graph1) || !is.igraph(graph2)) {
     stop("Not a graph object")
   }
   .Call("R_igraph_isomorphic_vf2", graph1, graph2,
+        as.logical(map12), as.logical(map21),
         PACKAGE="igraph")
 }  
 
