@@ -1,3 +1,9 @@
+2007-08-23  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/topology.R (graph.isomorphic.vf2)
+	* interfaces/R/src/rinterface.c.in (R_igraph_isomorphic_vf2) :
+	added 'map12' and 'map21' arguments
+
 2007-08-17  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/layout.R (layout.fruchterman.reingold) :
